--- a/monitor/css/style.css
+++ b/monitor/css/style.css
@@ -20,7 +20,6 @@ a {
     color: fuchsia; }
 
 #mainCanvas {
-  border: 1px solid magenta;
   margin: 0 auto;
   display: block;
   width: 1024px;
@@ -33,4 +32,7 @@ footer {
   bottom: 0;
   left: 0; }
   footer p {
-    text-align: center; }
+    text-align: center;
+    line-height: 1em; }
+    footer p span {
+      color: #BACAE1; }
