--- a/pocket/style/scss/main.scss
+++ b/pocket/style/scss/main.scss
@@ -28,10 +28,10 @@
  $ USER SELECT
 \********************/
 
-.user-select {
+.slider {
 	background: $white;
 	height: 120px;
-	padding: 20px;
+	padding: 20px 0;
 
 	ul {
 
