--- a/pocket/style/scss/color.scss
+++ b/pocket/style/scss/color.scss
@@ -8,3 +8,5 @@ $grey-dark: rgba(54,54,54,1.0);
 $presence: rgba(235,155,101,1);
 $environment: rgba(102,204,158,1);
 $social: rgba(46,170,222,1);
+
+$glow: rgba(6,219,180, 1);
