--- a/pocket/style/scss/color.scss
+++ b/pocket/style/scss/color.scss
@@ -9,4 +9,5 @@ $presence: rgba(235,155,101,1);
 $environment: rgba(102,204,158,1);
 $social: rgba(46,170,222,1);
 
-$glow: rgba(6,219,180, 1);
+$present: rgba(6,219,180, 1);
+$absent: rgba(220, 68, 68, 1);
