Deprecated presence channel and added legit event filtering

--- a/pocket/style/main.css
+++ b/pocket/style/main.css
@@ -40,10 +40,15 @@
   text-transform: uppercase;
   color: #ebebeb; }
 
+.historic {
+  opacity: .5; }
+
 /********************\
  $ TIMELINE
 \********************/
 .event {
+  display: block;
+  position: relative;
   padding: 30px;
   background-color: white; }
   .event .messsage {
